This commit would prevent filter option horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
+  width: calc(100%-20px);
   height: 100%;
   background-color: #3397DB;
   align-items: center;
